--- a/Source/WpfHosting.Sample/WpfHosting.Sample.csproj
+++ b/Source/WpfHosting.Sample/WpfHosting.Sample.csproj
@@ -4,6 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
+    <IncludePackageReferencesDuringMarkupCompilation>true</IncludePackageReferencesDuringMarkupCompilation>
   </PropertyGroup>
 
   <Import Project="..\..\Build\WpfHosting.props" />
