--- a/Source/WpfHosting.Sample/WpfHosting.Sample.csproj
+++ b/Source/WpfHosting.Sample/WpfHosting.Sample.csproj
@@ -6,15 +6,10 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
-  <Import Project="..\..\Build\WpfHosting.props" />
-
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\WpfHosting\WpfHosting.csproj" />
+    <PackageReference Include="WpfHosting" Version="0.1.0" />
   </ItemGroup>
 
   <ItemGroup>
