--- a/Source/WpfHosting/WpfHosting.csproj
+++ b/Source/WpfHosting/WpfHosting.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFrameworks>net7.0-windows;net6.0-windows</TargetFrameworks>
     <UseWPF>true</UseWPF>
     <IsPackable>true</IsPackable>
   </PropertyGroup>
