--- a/Source/WpfHosting.Sample/WpfHosting.Sample.csproj
+++ b/Source/WpfHosting.Sample/WpfHosting.Sample.csproj
@@ -7,10 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.1" />
-    <PackageReference Include="System.Text.Json" Version="9.0.0" />
-    <PackageReference Include="WpfHosting" Version="0.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" />
+    <PackageReference Include="WpfHosting" />
   </ItemGroup>
 
   <ItemGroup>
