--- a/Source/WpfHosting/WpfHosting.csproj
+++ b/Source/WpfHosting/WpfHosting.csproj
@@ -7,17 +7,13 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <Description>Minimal APIとMicrosoft.Extensions.DependencyInjectionを使用したWPFアプリケーションの構築を行うライブラリです。</Description>
+    <Description>Library for building WPF applications using Generic Host.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageTags>WPF</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
-    <PackageReference Include="Microsoft.Extensions.Logging" />
-    <PackageReference Include="Microsoft.Extensions.Options" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" />
   </ItemGroup>
 
 </Project>
