--- a/Source/WpfHosting.Sample/WpfHosting.Sample.csproj
+++ b/Source/WpfHosting.Sample/WpfHosting.Sample.csproj
@@ -1,19 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net9.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
+    <EnableDefaultApplicationDefinition>false</EnableDefaultApplicationDefinition>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" />
-    <PackageReference Include="WpfHosting" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WpfHosting.Sample.ViewModels\WpfHosting.Sample.ViewModels.csproj" />
+    <ProjectReference Include="..\WpfHosting\WpfHosting.csproj" />
   </ItemGroup>
 
   <ItemGroup>
