--- a/Source/WpfHosting.Sample/WpfHosting.Sample.csproj
+++ b/Source/WpfHosting.Sample/WpfHosting.Sample.csproj
@@ -4,16 +4,10 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net9.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
-    <EnableDefaultApplicationDefinition>false</EnableDefaultApplicationDefinition>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Debug" />
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\WpfHosting\WpfHosting.csproj" />
+    <PackageReference Include="WpfHosting" />
   </ItemGroup>
 
   <ItemGroup>
